--- a/Curs01/Ex06/css/style.css
+++ b/Curs01/Ex06/css/style.css
@@ -5,4 +5,38 @@
   margin: 0 auto;
 }
 
+.square-magenta {
+  width: 200px;
+  height: 200px;
+  display: block;
+  border: 1px solid #000000;
+  background-color: turquoise;
+  background-color: magenta;
+}
+
+.square-peru {
+  width: 200px;
+  height: 200px;
+  display: block;
+  border: 1px solid #000000;
+  background-color: turquoise;
+  background-color: peru;
+}
+
+.square-purple {
+  width: 200px;
+  height: 200px;
+  display: block;
+  border: 1px solid #000000;
+  background-color: turquoise;
+  background-color: purple;
+}
+
+.test {
+  margin: 0 auto;
+}
+.test .extra-class {
+  color: red;
+}
+
 /*# sourceMappingURL=style.css.map */
