--- a/Curs01/Ex06/scss/app.scss
+++ b/Curs01/Ex06/scss/app.scss
@@ -14,6 +14,14 @@
   background-color: $bg;
 }
 
+@mixin test {
+  margin: 0 auto;
+
+  .extra-class {
+    color: red;
+  }
+}
+
 // Aplica o clasa squares pe primul div, seteaza-i
 // latimea la 80%, o bordura neagra de 1px, si
 // padding de 10px. Acest div trebuie sa fie centrat.
@@ -46,4 +54,8 @@
   @include square;
 
   @include box-bg(purple);
+}
+
+.test {
+  @include test();
 }
