--- a/Curs01/Ex06/css/style.css
+++ b/Curs01/Ex06/css/style.css
@@ -39,4 +39,51 @@
   color: red;
 }
 
+.circles {
+  margin: 0 auto;
+  width: 75%;
+  border: 2px dotted brown;
+  border-radius: 20px;
+}
+
+.circle-red {
+  width: 200px;
+  height: 200px;
+  display: block;
+  border: 3px solid red;
+  background-color: purple;
+  border-radius: 200px;
+  background-color: #d15656;
+}
+
+.circle-green {
+  width: 200px;
+  height: 200px;
+  display: block;
+  border: 3px solid red;
+  background-color: purple;
+  border-radius: 200px;
+  background-color: green;
+}
+
+.circle-blue {
+  width: 200px;
+  height: 200px;
+  display: block;
+  border: 3px solid red;
+  background-color: purple;
+  border-radius: 200px;
+  background-color: blue;
+}
+
+.circle-border-blue {
+  width: 200px;
+  height: 200px;
+  display: block;
+  border: 3px solid red;
+  background-color: purple;
+  border-radius: 200px;
+  border: 3px solid red;
+}
+
 /*# sourceMappingURL=style.css.map */
