--- a/Curs01/Ex08/scss/app.scss
+++ b/Curs01/Ex08/scss/app.scss
@@ -34,3 +34,43 @@
 
   @extend %square;
 }
+
+// 06. Aplica clasa circles pe urmatorul div,
+// centreaza-l, seteaza-i latimea la 802px
+// si aplica-i o bordura neagra solida de 1px
+.circles {
+  margin: 0 auto;
+  width: 802px;
+  border: 1px solid black;
+}
+
+// 07. Creaza o clasa circle  (%circle)
+// care sa redea un cerc de 200px de fundal maro si bordura neagra de 1px
+%circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
+  background-color: brown;
+  border: 1px solid black;
+}
+
+// 08. Creaza clase circle-red, circle-green, circle-blue
+// care sa seteze culoarea de fundal conform numelor
+// lor si sa extinda clasa circle
+.circle-red {
+  @extend %circle;
+
+  background-color: red;
+}
+
+.circle-green {
+  @extend %circle;
+
+  background-color: green;
+}
+
+.circle-blue {
+  @extend %circle;
+
+  background-color: blue;
+}
