--- a/Curs01/Ex08/css/style.css
+++ b/Curs01/Ex08/css/style.css
@@ -24,4 +24,30 @@
   background-color: purple;
 }
 
+.circles {
+  margin: 0 auto;
+  width: 802px;
+  border: 1px solid black;
+}
+
+.circle-blue, .circle-green, .circle-red {
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
+  background-color: brown;
+  border: 1px solid black;
+}
+
+.circle-red {
+  background-color: red;
+}
+
+.circle-green {
+  background-color: green;
+}
+
+.circle-blue {
+  background-color: blue;
+}
+
 /*# sourceMappingURL=style.css.map */
