--- a/Curs02/Ex05/scss/app.scss
+++ b/Curs02/Ex05/scss/app.scss
@@ -31,3 +31,21 @@
   @include size(10px, 10px);
   @include shape('rhombus');
 }
+
+@mixin btn-dir($direction: 'left') {
+  width: 0;
+  height: 0;
+  content: '';
+
+  @if $direction == 'left' {
+    border-top: 10px solid transparent;
+    border-right: 10px solid black;
+    border-bottom: 10px solid transparent;
+  }
+}
+
+.button-left {
+  &::before {
+    @include btn-dir('left');
+  }
+}
