--- a/Curs02/Ex04/css/style.css
+++ b/Curs02/Ex04/css/style.css
@@ -10,4 +10,20 @@
   background-color: transparent;
 }
 
+.btn-inverted-light {
+  background-color: lightgray;
+}
+
+.btn-tertiary {
+  color: green;
+}
+
+.btn-text-gray {
+  color: grey;
+}
+
+.btn-inverted {
+  background-color: lightblue;
+}
+
 /*# sourceMappingURL=style.css.map */
