--- a/Curs02/Ex04/scss/app.scss
+++ b/Curs02/Ex04/scss/app.scss
@@ -27,3 +27,18 @@ $default_color: red;
 //  btn-inverted care sa foloseasca pentru fundalul
 //  butonului valoarea transparent
 @include btn-class('.btn-inverted', 'background-color', transparent);
+
+// Pct.6. Genereaza pentru al patrulea buton o clasa numita btn-inverted-light
+// care sa foloseasca pentru fundal culoarea lightgray
+@include btn-class('.btn-inverted-light', 'background-color', lightgray);
+
+// Pct 7. Genereaza pentru ultimul buton o clasa  btn-tertiary
+// care sa genereze culoarea textului verde
+@include btn-class('.btn-tertiary', 'color', green);
+
+// Pct 8. Genereaza a clasa numita btn-text-gray care sa genereze culoarea textului gri.
+@include btn-class('.btn-text-gray', 'color', grey);
+
+// pct 9. Creaza un nou buton care sa aibe clasa btn-inverted
+// si folosind ambele clase, stileaza acest nou buton.
+@include btn-class('.btn-inverted', 'background-color', lightblue);
