--- a/Curs02/Ex08/scss/app.scss
+++ b/Curs02/Ex08/scss/app.scss
@@ -20,3 +20,34 @@ $border-styles: dotted, solid, dashed, double, none;
     border-style: $border-style;
   }
 }
+
+// Pct 3. Pentru al doilea set de elemente genereaza clase de felul
+// (m-xs, m-sm) care vor aplicat marginile respective pe element
+// (valorile sunt: "xs": 4px, "sm": 8px, "md": 16px, "lg": 32px )
+$margins: (
+  'xs': 4px,
+  'sm': 8px,
+  'md': 16px,
+  'lg': 32px,
+);
+
+@each $size, $value in $margins {
+  .m-#{$size} {
+    margin: $value;
+  }
+}
+
+// Pct. 4 In mod similar genereaza clase pentru paddinguri
+// pentru a stila ultimul set de elemente
+$paddings: (
+  'xs': 4px,
+  'sm': 8px,
+  'md': 16px,
+  'lg': 32px,
+);
+
+@each $size, $value in $paddings {
+  .p-#{$size} {
+    padding: $value;
+  }
+}
