--- a/Curs02/Ex06/css/style.css
+++ b/Curs02/Ex06/css/style.css
@@ -1,22 +1,78 @@
-/* Error: Missing argument $if-false.
- *   ,--> scss\app.scss
- * 47|   $color: if($condition, grey);
- *   |           ^^^^^^^^^^^^^^^^^^^^ invocation
- *   '
- *   ,
- * 1 | @function if($condition, $if-true, $if-false) {
- *   |           =================================== declaration
- *   '
- *   scss\app.scss 47:11  boxes()
- *   scss\app.scss 60:3   root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Missing argument $if-false.\a   \250c \2500 \2500 > scss\\app.scss\a 47\2502    $color: if($condition, grey);\d\a   \2502            ^^^^^^^^^^^^^^^^^^^^ invocation\a   \2575 \a   \2577 \a 1 \2502  @function if($condition, $if-true, $if-false) {\a   \2502            \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501 \2501  declaration\a   \2575 \a   scss\\app.scss 47:11  boxes()\a   scss\\app.scss 60:3   root stylesheet";
+.row {
+  display: flex;
+  justify-content: space-between;
+  margin: 16px 0;
 }
+
+.box {
+  width: 150px;
+  height: 150px;
+  border: 1px solid #000;
+}
+
+.box-1 {
+  border-width: 1px;
+}
+
+.box-2 {
+  border-width: 2px;
+}
+
+.box-3 {
+  border-width: 3px;
+}
+
+.box-4 {
+  border-width: 4px;
+}
+
+.box-5 {
+  border-width: 5px;
+}
+
+.box-01 {
+  width: 155px;
+  height: 155px;
+}
+
+.box-02 {
+  width: 160px;
+  height: 160px;
+}
+
+.box-03 {
+  width: 165px;
+  height: 165px;
+}
+
+.box-04 {
+  width: 170px;
+  height: 170px;
+}
+
+.box-05 {
+  width: 175px;
+  height: 175px;
+}
+
+.box-10 {
+  background-color: grey;
+}
+
+.box-20 {
+  background-color: inherit;
+}
+
+.box-30 {
+  background-color: grey;
+}
+
+.box-40 {
+  background-color: inherit;
+}
+
+.box-50 {
+  background-color: grey;
+}
+
+/*# sourceMappingURL=style.css.map */
