--- a/Curs02/Ex06/scss/app.scss
+++ b/Curs02/Ex06/scss/app.scss
@@ -37,29 +37,10 @@
 // Elementele din pozitii impare trebuie sa aibe fundalul gri.
 @for $i from 1 through 5 {
   .box-#{$i}0 {
-    $width: 150px + ($i * 2);
-    width: $width;
-    height: $width;
+    @if $i % 2 == 0 {
+      background-color: inherit;
+    } @else {
+      background-color: grey;
+    }
   }
-}
-
-@mixin boxes($condition) {
-  $color: if($condition, grey);
-  background-color: $color;
-
-  @if $i %1 == 1 {
-    background-color: grey;
-  }
-
-  @if $i %2 == 0 {
-    background-color: transparent;
-  }
-}
-
-.box-10 {
-  @include boxes(true);
-}
-
-.box-20 {
-  @include boxes(false);
 }
