--- a/Curs02/Ex07/css/style.css
+++ b/Curs02/Ex07/css/style.css
@@ -50,4 +50,44 @@
   border-width: 10px;
 }
 
+.box-1 {
+  border: 2px dotted black;
+}
+
+.box-2 {
+  background-color: grey;
+}
+
+.box-3 {
+  border: 2px dotted black;
+}
+
+.box-4 {
+  background-color: grey;
+}
+
+.box-5 {
+  border: 2px dotted black;
+}
+
+.box-6 {
+  background-color: grey;
+}
+
+.box-7 {
+  border: 2px dotted black;
+}
+
+.box-8 {
+  background-color: grey;
+}
+
+.box-9 {
+  border: 2px dotted black;
+}
+
+.box-10 {
+  background-color: grey;
+}
+
 /*# sourceMappingURL=style.css.map */
