--- a/Monochrome/scss/_variables.scss
+++ b/Monochrome/scss/_variables.scss
@@ -1,9 +1,5 @@
-$brand-main: #ff6b6b;
-$brand-secondary: #2f4766;
+$brand-main: #2b2b2b;
+$brand-secondary: #fff;
 
-$gray-main: #707070;
-$gray-secondary: #363636;
-$gray-tertiary: #aeaeae;
-
-$black: #000;
-$white: #fff;
+$gray-main: #e8e8e8;
+$gray-secondary: #707070;
