--- a/Monochrome/scss/fonts.scss
+++ b/Monochrome/scss/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: 'Roboto';
-  src: url('/fonts/Roboto-Bold.woff2') format('woff2'),
-    url('/fonts/Roboto-Bold.woff') format('woff');
+  font-family: 'PlayfairDisplay';
+  src: url('/fonts/PlayfairDisplay-Bold.woff2') format('woff2'),
+    url('/fonts/PlayfairDisplay-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
