--- a/Monochrome/scss/index.scss
+++ b/Monochrome/scss/index.scss
@@ -14,6 +14,6 @@ $fa-font-path: '/fonts';
 @import './variables';
 
 body {
-  font-family: Roboto, sans-serif;
-  color: $gray-main;
+  font-family: PlayfairDisplay;
+  color: $brand-main;
 }
