--- a/Curs09/Ex01/css/style.css
+++ b/Curs09/Ex01/css/style.css
@@ -61,3 +61,25 @@ cu primul si ultimul element lipite de marginile laterale */
   align-items: center;
   justify-content: space-between;
 }
+
+/* Pct. 4 Pentru cutia 4, inverseaza ordinea numerelor si pozitioneaza-le in dreapta sus  */
+.flex-container-04 {
+  flex-direction: row-reverse;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+/* Pct. 5 Pentru cutia 5, inverseaza ordinea numerelor si
+ pozitioneaza-le pe latura de jos a cutiei cu spatiu intre ele */
+.flex-container-05 {
+  flex-direction: row-reverse;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
+/* Pct. 6 Pentru cutia 6, inverseaza ordinea numerelor si pozitioneaza-le
+pe latura de sus a cutiei cu primul si ultimul element lipite de marginile laterale */
+.flex-container-06 {
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
