--- a/Curs09/Ex02/css/style.css
+++ b/Curs09/Ex02/css/style.css
@@ -64,3 +64,34 @@ coloana si pozitioneaza-le in coltul din stanga sus */
   justify-content: flex-start;
   align-items: flex-start;
 }
+
+/* Pct. 1 Pentru cutia 1, orienteaza numerele pe coloana si
+centreaza-le vertical cu spatiu intre ele pe verticala  */
+.flex-container-01 {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+/* Pct 2 Pentru cutia 2, orienteaza numerele pe coloana si
+ pozitioneaza-le in coltul din stanga jos */
+.flex-container-02 {
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+/* Pct 3 Pentru cutia 3, orienteaza numerele pe coloana si
+pozitioneaza-le pe latura din stanga a cutiei
+cu primul si ultimul element atingand laturile de sus si de jos */
+.flex-container-03 {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* Pct 4 Pentru cutia 4, orienteaza numerele
+pe coloana si centreaza-le vertical si orizontal */
+.flex-container-04 {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
