--- a/Curs09/Ex03/css/style.css
+++ b/Curs09/Ex03/css/style.css
@@ -65,3 +65,34 @@ latura din dreapta a cutiei */
   justify-content: center;
   align-items: flex-end;
 }
+
+/* Pct 1 Pentru cutia 1, ordoneaza numerele corect
+ si in coloana si pozitioneaza-le in coltul de dreapta sus */
+.flex-container-01 {
+  flex-direction: column-reverse;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+/* Pct 2 Pentru cutia 2, ordoneaza numerele corect
+si in coloana, centreaza-le pe orizontala cu spatiu egal intre ele pe verticala */
+.flex-container-02 {
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+/* Pct 3 Pentru cutia 3, ordoneaza numerele corect si in coloana
+si pozitioneaza-le pe latura din stanga a cutiei cu
+primul si ultimul element lipite de laturile de sus si de jos */
+.flex-container-03 {
+  flex-direction: column-reverse;
+  justify-content: space-between;
+}
+
+/* pct 4 Pentru cutia 4, ordoneaza numerele corect si
+in coloana si pozitioneaza-le in coltul din stanga sus */
+.flex-container-04 {
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+}
