--- a/Curs09/Ex10/css/style.css
+++ b/Curs09/Ex10/css/style.css
@@ -55,3 +55,41 @@
 .flex-container-02 :nth-child(3) {
   order: -2;
 }
+
+/* Pentru cutia 3, orienteaza randul invers si aranjeaza
+ numerele in ordine crescatoare */
+.flex-container-03 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-03 :nth-child(4) {
+  order: 1;
+}
+
+/* Pentru cutia 4, aranjeaza numerele in ordine crescatoare */
+.flex-container-04 :nth-child(3) {
+  order: -1;
+}
+
+.flex-container-04 :nth-child(4) {
+  order: 1;
+}
+
+/* Pentru cutia 5, orienteaza randul invers si
+aranjeaza numerele in ordine descrescatoare */
+.flex-container-05 {
+  flex-direction: row-reverse;
+}
+
+.flex-container-05 :nth-child(2) {
+  order: 1;
+}
+
+.flex-container-05 :nth-child(4) {
+  order: -1;
+}
+
+/* Pentru cutia 6, aranjeaza numerele in ordine crescatoare */
+.flex-container-06 :nth-child(3) {
+  order: -1;
+}
