--- a/Curs09/Ex12/css/style.css
+++ b/Curs09/Ex12/css/style.css
@@ -63,3 +63,35 @@ si justify-content: space-between */
   align-content: space-between;
   justify-content: space-between;
 }
+
+/* Pct 3 Pentru cutia 3, seteaza wrap,
+align-content: space-between si justify-content: flex-end */
+.flex-container-03 {
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: flex-end;
+}
+
+/* Pct 4 Pentru cutia 4, seteaza wrap,
+align-content: flex-end si justify-content: flex-start  */
+.flex-container-04 {
+  flex-wrap: wrap;
+  align-content: flex-end;
+  justify-content: flex-start;
+}
+
+/* Pentru cutia 5, seteaza wrap,
+align-content: flex-start si justify-content: space-around  */
+.flex-container-05 {
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: space-around;
+}
+
+/* Pct 6 Pentru cutia 6, seteaza wrap,
+align-content: center si justify-content: center */
+.flex-container-06 {
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
