--- a/Thread Affair/scss/homepage/_home-newsletter.scss
+++ b/Thread Affair/scss/homepage/_home-newsletter.scss
@@ -40,10 +40,11 @@
       font-weight: 300;
       text-transform: uppercase;
       color: $white;
-      background: url('/img/icons/mail-send.png');
-      height: 59px;
+      background: url('/img/icons/mail-send.png') no-repeat right;
+      height: 56px;
       display: inline-block;
       padding-right: 130px;
+      margin-top: 15px;
     }
   }
 }
