--- a/Thread Affair/scss/homepage/_catalog-preview.scss
+++ b/Thread Affair/scss/homepage/_catalog-preview.scss
@@ -3,6 +3,14 @@
 
   header {
     h1 {
+      @include media-breakpoint-up('md') {
+        text-align: center;
+        font-size: 41px;
+        color: $gray-secondary;
+        font-weight: 300;
+        text-transform: capitalize;
+      }
+
       text-transform: uppercase;
       color: $brand-main;
       font-size: 24px;
@@ -12,6 +20,13 @@
     p {
       font-size: 14px;
       font-weight: 300;
+    }
+  }
+
+  .product-tiles {
+    @include media-breakpoint-up('md') {
+      display: flex;
+      justify-content: space-between;
     }
   }
 }
