--- a/Thread Affair/scss/homepage/_banner-main.scss
+++ b/Thread Affair/scss/homepage/_banner-main.scss
@@ -24,23 +24,25 @@
   h1 {
     @include media-breakpoint-up('md') {
       font-size: 75px;
-      margin-bottom: 35px;
+      margin: 35px 0 60px 0;
+      line-height: 20px;
     }
 
     font-size: 49px;
     line-height: 52px;
-    margin: 0;
+    margin: 150px auto 0 auto;
   }
 
   h2 {
     @include media-breakpoint-up('md') {
       font-size: 42px;
+      margin: 0 0 60px 0;
     }
 
     font-size: 27px;
     line-height: 30px;
     font-weight: 300;
-    margin: 0 0 59px 0;
+    margin: 10px auto 50px auto;
   }
 
   .banner-copy {
@@ -51,7 +53,7 @@
       margin: 0;
     }
 
-    margin: 40px 0 75px 0;
+    margin: 80px auto 0 auto;
 
     p {
       @include media-breakpoint-up('md') {
