--- a/Thread Affair/scss/shared/controls/_buttons.scss
+++ b/Thread Affair/scss/shared/controls/_buttons.scss
@@ -1,4 +1,14 @@
 .btn {
+  @include media-breakpoint-up('md') {
+    transition: transform 0.2s;
+
+    &:hover {
+      text-decoration: none;
+      color: $white;
+      transform: scale(1.2);
+    }
+  }
+
   display: inline-block;
   padding: 13px 35px;
   background-color: $brand-main;
@@ -8,5 +18,21 @@
 }
 
 .btn-lg {
+  @include media-breakpoint-up('md') {
+    margin-right: 0;
+    border: 2px solid $brand-main;
+    background-color: transparent;
+    color: $brand-main;
+    transition: color 0.2s linear, background-color 0.2s linear;
+    font-weight: 500;
+
+    &:hover {
+      text-decoration: none;
+      background: $brand-main;
+      color: $white;
+    }
+  }
+
   padding: 18px 40px;
+  margin: 0 auto;
 }
