--- a/Curs11/Ex05/css/style.css
+++ b/Curs11/Ex05/css/style.css
@@ -57,3 +57,17 @@ pe 3 celule folosind cuvantul span apoi de la linia orizontala -3 la -1 */
   grid-row-start: 1;
   grid-row-end: 4;
 }
+
+.grid-item-3 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 5;
+}
+
+.grid-item-4 {
+  grid-column-start: 3;
+  grid-column-end: span 3;
+  grid-row-start: -3;
+  grid-row-end: -1;
+}
