--- a/Curs11/Ex11/css/style.css
+++ b/Curs11/Ex11/css/style.css
@@ -45,3 +45,41 @@ Pct 8 Aliniaza elementul 2 pe latura din stanga
 Pct 9 Aliniaza elementul 3 in coltul din dreapta jos
 Pct 10 Aliniaza elementul 4 centrat pe verticala si orizontala
 Pct 11 Aliniaza elementul 5 centrat pe orizontala si pe latura de jos  */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 140px 500px 320px 25%;
+  grid-template-rows: 120px 80px 120px 120px 90px;
+}
+
+.grid-item-1 {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 2;
+  justify-self: start;
+  align-self: start;
+}
+
+.grid-item-2 {
+  grid-column: 1 / 4;
+  grid-row: 2 / span 1;
+  justify-self: start;
+}
+
+.grid-item-3 {
+  justify-self: end;
+  align-self: end;
+}
+
+.grid-item-4 {
+  grid-column: 1 / 3;
+  grid-row: -3 / -1;
+  justify-self: center;
+  align-self: center;
+}
+
+.grid-item-5 {
+  grid-column: -2 / span 1;
+  grid-row: 1 / -1;
+  justify-self: center;
+  align-self: end;
+}
