--- a/Curs11/Ex14/css/style.css
+++ b/Curs11/Ex14/css/style.css
@@ -18,11 +18,73 @@
 }
 
 .grid-item-4 {
-  background-color: lightsalmon
+  background-color: lightsalmon;
 }
 
 /* can't touch this 🔨 */
 
+/* 1. Creaza un grid mobile first cu max-width: 1290 si
+width: 100% dupa urmatoarea matrice:
+header
+content
+sidebar
+footer
+2. Folosind proprietatea grid-area asocieaza
+ primul element cu zonele de header
+3. Asocieaza al doilea element cu zonele de content
+4. Asociaza al treilea element cu zonele de sidebar
+5. Asociaza al patrulea element cu zonele de footer
+6. Pentru rezolutiile mai mari de 520 inverseaza
+ zona de content cu cea de sidebar
+7. Pentru rezolutiile mai mari de 768 configureaza
+gridul dupa urmatorea matrice
+header header header
+sidebar . content
+footer footer footer
+8. Configureaza gridul cu urmatoarele coloane: 320px 25px 1fr  */
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 320px 25px 1fr;
+  max-width: 1290px;
+  width: 100%;
+  grid-template-areas:
+    'header'
+    'content'
+    'sidebar'
+    'footer';
+}
+.grid-item-1 {
+  grid-area: header;
+}
 
+.grid-item-2 {
+  grid-area: content;
+}
 
+.grid-item-3 {
+  grid-area: sidebar;
+}
+
+.grid-item-4 {
+  grid-area: footer;
+}
+
+@media (min-width: 521px) {
+  .grid-container {
+    grid-template-areas:
+      'header'
+      'sidebar'
+      'content'
+      'footer';
+  }
+}
+
+@media (min-width: 769px) {
+  .grid-container {
+    grid-template-areas:
+      'header header header'
+      'sidebar . content'
+      'footer footer footer';
+  }
+}
