--- a/Curs11/Ex15/css/style.css
+++ b/Curs11/Ex15/css/style.css
@@ -18,7 +18,7 @@
 }
 
 .grid-item-4 {
-  background-color: lightsalmon
+  background-color: lightsalmon;
 }
 
 .grid-item-4 {
@@ -27,6 +27,70 @@
 
 /* can't touch this 🔨 */
 
+/* 1. Creaza un grid mobile first cu max-width: 1290 si
+width: 100% dupa urmatoarea matrice:
+header
+filters
+content
+footer
+2. Sidebarul este ascuns pe mobil
+3. Asociaza primul element cu zona header
+4. Asociaza al doilea element cu zona filters
+5. Asociaza al treilea element cu zona content
+6. Asociaza al patrulea element cu zona sidebar
+7. Asociaza al cincilea element cu zona footer
+8. Pentru rezolutiile mai mari de 800 de pixeli,
+configureaza gridul dupa matricea:
+header header header
+sidebar . filters
+sidebar . content
+footer footer footer
+9. Configureaza gridul cu urmatoarele coloane 400px 10px 1fr */
 
+.grid-container {
+  display: grid;
+  max-width: 1290px;
+  width: 100%;
+  grid-template-areas:
+    'header'
+    'filters'
+    'content'
+    'footer';
+  grid-template-columns: 400px 10px 1fr;
+}
 
+@media (max-width: 414px) {
+  .grid-item-4 {
+    display: none;
+  }
+}
 
+.grid-item-1 {
+  grid-area: header;
+}
+
+.grid-item-2 {
+  grid-area: filters;
+}
+
+.grid-item-3 {
+  grid-area: content;
+}
+
+.grid-item-4 {
+  grid-area: sidebar;
+}
+
+.grid-item-5 {
+  grid-area: footer;
+}
+
+@media (min-width: 800px) {
+  .grid-container {
+    grid-template-areas:
+      'header header header'
+      'sidebar . filters'
+      'sidebar . content'
+      'footer footer footer';
+  }
+}
