--- a/Curs11/Ex16/css/style.css
+++ b/Curs11/Ex16/css/style.css
@@ -1,1 +1,145 @@
+.grid-container {
+  width: 800px;
+  height: 800px;
+  border: 2px solid black;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+}
 
+.grid-item-a1 {
+  background-color: #818181;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.grid-item-a3 {
+  background-color: #818181;
+  grid-column: 3 /4;
+  grid-row: 1 / 2;
+}
+
+.grid-item-a5 {
+  background-color: #818181;
+  grid-column: 5 / 6;
+  grid-row: 1 / 2;
+}
+
+.grid-item-a7 {
+  background-color: #818181;
+  grid-column: 7 / 8;
+  grid-row: 1 / 2;
+}
+
+.grid-item-b2 {
+  background-color: #818181;
+}
+
+.grid-item-b4 {
+  background-color: #818181;
+}
+
+.grid-item-b6 {
+  background-color: #818181;
+}
+
+.grid-item-b8 {
+  background-color: #818181;
+}
+
+.grid-item-c1 {
+  background-color: #818181;
+}
+
+.grid-item-c3 {
+  background-color: #818181;
+}
+
+.grid-item-c5 {
+  background-color: #818181;
+}
+
+.grid-item-c7 {
+  background-color: #818181;
+}
+
+.grid-item-d2 {
+  background-color: #818181;
+}
+
+.grid-item-d4 {
+  background-color: #818181;
+}
+
+.grid-item-d6 {
+  background-color: #818181;
+}
+
+.grid-item-d8 {
+  background-color: #818181;
+}
+
+.grid-item-e1 {
+  background-color: #818181;
+}
+
+.grid-item-e3 {
+  background-color: #818181;
+}
+
+.grid-item-e5 {
+  background-color: #818181;
+}
+
+.grid-item-e7 {
+  background-color: #818181;
+}
+
+.grid-item-f2 {
+  background-color: #818181;
+}
+
+.grid-item-f4 {
+  background-color: #818181;
+}
+
+.grid-item-f6 {
+  background-color: #818181;
+}
+
+.grid-item-f8 {
+  background-color: #818181;
+}
+
+.grid-item-g1 {
+  background-color: #818181;
+}
+
+.grid-item-g3 {
+  background-color: #818181;
+}
+
+.grid-item-g5 {
+  background-color: #818181;
+}
+
+.grid-item-g7 {
+  background-color: #818181;
+}
+
+.grid-item-h2 {
+  background-color: #818181;
+}
+
+.grid-item-h4 {
+  background-color: #818181;
+}
+
+.grid-item-h6 {
+  background-color: #818181;
+}
+
+.grid-item-h8 {
+  background-color: #818181;
+}
