--- a/Curs11/Ex17/css/style.css
+++ b/Curs11/Ex17/css/style.css
@@ -1,1 +1,19 @@
+/* 1. Creaza un grid de 8 pe 8 folosind CSS grid
+2. Coloreaza folosind grid items cu background
+lightblue din doua in doua coloane incepand cu prima
+3. Coloreaza folosind grid items cu background
+lightgreen din doua in doua randuri incepand cu al doilea  */
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(8, 100px);
+  grid-template-rows: repeat(8, 100px);
+}
+
+.grid-item:nth-child(odd) {
+  background-color: lightblue;
+}
+
+.grid-item:nth-child(even) {
+  background-color: lightgreen;
+}
