--- a/Monochrome/scss/fonts.scss
+++ b/Monochrome/scss/fonts.scss
@@ -8,9 +8,9 @@
 }
 
 @font-face {
-  font-family: 'Julius Sans One';
-  src: url('/fonts/JuliusSansOne-Regular.woff2') format('woff2'),
-    url('/fonts/JuliusSansOne-Regular.woff') format('woff');
+  font-family: 'PlayFair Display';
+  src: url('/fonts/PlayFair Display-Regular.woff2') format('woff2'),
+    url('/fonts/PlayFair Display-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -26,9 +26,9 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('/fonts/Roboto-BoldItalic.woff2') format('woff2'),
-    url('/fonts/Roboto-BoldItalic.woff') format('woff');
+  font-family: 'PlayFair Display';
+  src: url('/fonts/playFair Display.woff2') format('woff2'),
+    url('/fonts/PlayFair Display.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
