--- a/Monochrome/scss/index.scss
+++ b/Monochrome/scss/index.scss
@@ -11,9 +11,16 @@ $fa-font-path: '/fonts';
 @import './../node_modules/bootstrap/scss/bootstrap-reboot';
 @import './../node_modules/bootstrap/scss/utilities';
 
+// project reset
+@import './reset';
 @import './variables';
+@import './common';
+
+@import './shared/index';
+@import './homepage/index';
+@import './category/index';
 
 body {
-  font-family: PlayfairDisplay;
+  font-family: 'PlayfairDisplay';
   color: $brand-main;
 }
