--- a/Monochrome/scss/homepage/_banner-main.scss
+++ b/Monochrome/scss/homepage/_banner-main.scss
@@ -1,15 +1,15 @@
 .banner-main {
-  background: url('/Monochrome/img/banner/banner2.png') no-repeat center center;
+  background: url('/img/banner/banner2.png') no-repeat center center;
   background-size: cover;
-  width: 375px;
+  width: 100%;
   height: 177px;
   position: relative;
 
   button {
     &[type='submit'] {
       position: absolute;
-      top: 124px;
-      left: 250px;
+      top: 120px;
+      left: 280px;
       width: 80px;
       height: 25px;
       border: 0;
