--- a/Monochrome/scss/category/_catalog-tiles.scss
+++ b/Monochrome/scss/category/_catalog-tiles.scss
@@ -1,18 +1,46 @@
 .catalog-tiles {
   display: flex;
+  align-items: center;
 }
 
 .catalog-tile {
+  @include media-breakpoint-up('md') {
+    display: inline-block;
+    margin-right: 24px;
+
+    .product-price {
+      font-size: 22px;
+    }
+  }
+
   align-items: center;
   position: relative;
 
+  &:nth-of-type(3n + 1) {
+    @include media-breakpoint-up('md') {
+      display: inline-block;
+    }
+
+    display: none;
+  }
+
   img {
+    @include media-breakpoint-up('md') {
+      width: 320px;
+      height: 292px;
+    }
+
     width: 148px;
     height: 148px;
     margin-bottom: 10px;
   }
 
   .product-badge {
+    @include media-breakpoint-up('md') {
+      font-size: 22px;
+      right: 20px;
+    }
+
     color: $brand-main;
     position: absolute;
     right: 30px;
@@ -20,12 +48,16 @@
   }
 
   .product-title {
+    @include media-breakpoint-up('md') {
+      font-size: 22px;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+
     color: $brand-main;
     font-size: 16px;
     margin-bottom: 5px;
   }
-}
-
-.h-img {
-  display: none;
 }
