--- a/Monochrome/scss/homepage/_catalog-preview.scss
+++ b/Monochrome/scss/homepage/_catalog-preview.scss
@@ -2,6 +2,10 @@
   text-align: center;
 
   .border {
+    @include media-breakpoint-up('md') {
+      width: 1356px;
+    }
+
     display: inline-block;
     align-items: center;
     border: 1px solid $gray-secondary;
@@ -10,6 +14,10 @@
   }
 
   h1 {
+    @include media-breakpoint-up('md') {
+      font-size: 35px;
+    }
+
     margin-top: 8px;
     margin-bottom: 10px;
     font-size: 18px;
