--- a/Monochrome/scss/shared/footer/_footer.scss
+++ b/Monochrome/scss/shared/footer/_footer.scss
@@ -1,8 +1,19 @@
 .footer {
+  @include media-breakpoint-up('md') {
+    background-color: $gray-main;
+    min-height: 249px;
+    display: flex;
+    flex-direction: row;
+  }
+
   display: flex;
   flex-direction: column-reverse;
 
   .footer-info {
+    @include media-breakpoint-up('md') {
+      background-color: transparent;
+    }
+
     background-color: $gray-secondary;
     width: 100%;
 
@@ -14,10 +25,57 @@
       font-weight: normal;
       text-align: center;
     }
+
+    .footer-nav {
+      display: flex;
+      flex-direction: row-reverse;
+
+      ul {
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+
+        li {
+          display: block;
+          line-height: 40px;
+
+          a {
+            color: $white;
+            font-family: 'Roboto';
+            font-size: 16px;
+          }
+        }
+      }
+
+      .border {
+        border: 1px solid $gray-main;
+        margin-left: 15px;
+      }
+    }
+
+    .terms {
+      display: block;
+
+      ul {
+        margin: 30px 0;
+      }
+
+      a {
+        color: $white;
+        font-family: 'Roboto';
+        font-weight: 300;
+        font-size: 14px;
+        text-decoration: underline;
+      }
+    }
   }
 }
 
 .footer-subscribe {
+  @include media-breakpoint-up('md') {
+    background-color: transparent;
+  }
+
   background-color: $gray-main;
   width: 100%;
   height: 360px;
@@ -36,6 +94,10 @@
     margin-bottom: -15px;
 
     & span {
+      @include media-breakpoint-up('md') {
+        display: block;
+      }
+
       display: none;
     }
   }
@@ -54,13 +116,14 @@
   }
 
   button {
+    display: flex;
+    margin: 0 auto;
+
     &[type='submit'] {
       border: 1px solid $brand-main;
       background: transparent;
       font-family: 'Roboto';
       text-transform: uppercase;
-      margin-top: 24px;
-      margin-left: 150px;
       padding: 5px 15px;
     }
   }
