--- a/Monochrome/scss/shared/header/_header.scss
+++ b/Monochrome/scss/shared/header/_header.scss
@@ -1,75 +1,161 @@
-.header-contact {
-  display: none;
-}
+.img-cover {
+  @include media-breakpoint-up('md') {
+    background: url('/img/banner/banner.png') no-repeat center center;
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+  }
 
-.header-controls {
-  display: flex;
-  flex-wrap: wrap-reverse;
-
-  .user-control {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 16px;
-    margin-top: 46px;
-
-    .logo {
-      font-size: 20px;
-      color: $brand-main;
-    }
-
-    ul {
+  .header-contact {
+    @include media-breakpoint-up('md') {
       display: inline-block;
+      margin-top: 40px;
 
-      li {
+      ul {
         display: inline-block;
-        margin-right: 20px;
+        margin-left: 400px;
+
+        li {
+          display: inline-block;
+          margin-right: 30px;
+
+          a {
+            color: $white;
+            font-size: 20px;
+          }
+        }
+      }
+
+      p {
+        display: inline-block;
 
         a {
-          color: $brand-main;
-          font-size: 20px;
+          color: $white;
+          font-size: 16px;
+          margin-left: 35px;
+
+          &:hover {
+            text-decoration: none;
+          }
+        }
+      }
+    }
+
+    display: none;
+  }
+
+  .header-controls {
+    @include media-breakpoint-up('md') {
+      display: inline-block;
+      float: right;
+      margin-top: 40px;
+      margin-right: 600px;
+    }
+
+    display: flex;
+    flex-wrap: wrap-reverse;
+
+    .user-control {
+      @include media-breakpoint-up('md') {
+        font-size: 22px;
+      }
+
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 16px;
+      margin-top: 46px;
+
+      .logo {
+        font-size: 20px;
+        color: $brand-main;
+        padding-right: 40px;
+      }
+
+      ul {
+        @include media-breakpoint-up('md') {
+          display: inline-block;
+        }
+
+        display: inline-block;
+
+        li {
+          @include media-breakpoint-up('md') {
+            margin-right: 35px;
+            display: inline-block;
+          }
+
+          display: inline-block;
+          margin-right: 20px;
+
+          a {
+            color: $brand-main;
+            font-size: 20px;
+          }
         }
       }
     }
   }
-}
 
-.menu-nav {
-  display: flex;
-  align-items: center;
-  background-color: $brand-main;
-  width: 100%;
-  height: 50px;
-  position: relative;
-
-  input {
-    &[type='text'] {
-      width: 227px;
-      height: 35px;
-      padding: 10px;
-      text-transform: lowercase;
-      background: transparent;
-      border: 1px solid $white;
-      color: $white;
-      font-family: 'Roboto';
-      margin-right: 30px;
+  .menu-nav {
+    @include media-breakpoint-up('md') {
+      background-color: transparent;
     }
-  }
 
-  button {
-    &[type='submit'] {
-      border: 0;
-      background: transparent;
-      color: $white;
-      position: absolute;
-      right: 50px;
-      bottom: 12px;
+    background-color: $brand-main;
+    width: 100%;
+    height: 50px;
+
+    input {
+      &[type='text'] {
+        @include media-breakpoint-up('md') {
+          width: 254px;
+          height: 41px;
+          border: 1px solid #ccc;
+          color: $brand-main;
+          padding-left: 35px;
+          text-transform: capitalize;
+          font-size: 16px;
+        }
+
+        width: 227px;
+        height: 35px;
+        padding: 10px;
+        text-transform: lowercase;
+        background: transparent;
+        border: 1px solid $white;
+        color: $white;
+        font-family: 'Roboto';
+      }
     }
-  }
 
-  .menu-bars {
-    font-size: 28px;
-    color: $white;
-    margin-right: 50px;
-    margin-left: 30px;
+    button {
+      &[type='submit'] {
+        @include media-breakpoint-up('md') {
+          color: $brand-main;
+          font-size: 18px;
+          right: 220px;
+        }
+
+        border: 0;
+        background: transparent;
+        color: $white;
+        font-size: 16px;
+        position: absolute;
+        right: 14px;
+        top: 4px;
+      }
+    }
+
+    .menu-bars {
+      font-size: 28px;
+      color: $white;
+    }
+
+    form {
+      display: inline-block;
+      float: right;
+      margin-top: 6px;
+      position: relative;
+    }
   }
 }
