--- a/Monochrome/scss/index.scss
+++ b/Monochrome/scss/index.scss
@@ -19,6 +19,7 @@ $fa-font-path: '/fonts';
 @import './shared/index';
 @import './homepage/index';
 @import './category/index';
+@import './menspage/index';
 
 body {
   font-family: 'PlayfairDisplay';
