--- a/Monochrome/scss/shared/header/_nav.scss
+++ b/Monochrome/scss/shared/header/_nav.scss
@@ -10,12 +10,12 @@
 
       li {
         display: inline-block;
-        margin: 12px 150px 0 0;
 
         a {
           color: $white;
           font-size: 20px;
           text-transform: uppercase;
+          line-height: 50px;
 
           &:hover {
             text-decoration: none;
