--- a/Monochrome/scss/productpage/_productpage.scss
+++ b/Monochrome/scss/productpage/_productpage.scss
@@ -71,25 +71,48 @@
   }
 
   .product-buttons {
-    display: flex;
-    justify-content: space-between;
+    display: block;
 
-    .add-to-bag {
-      width: 230px;
+    nav {
+      display: flex;
+      justify-content: space-between;
 
-      .shopping-bag {
-        border: 1px solid #ccc;
-        padding: 12px;
+      a {
+        display: flex;
+        border: 1px solid #e8e8e8;
+        line-height: 44px;
+        padding-right: 40px;
         color: $brand-main;
-      }
-
-      .add2bag {
-        background-color: $brand-main;
-        color: $white;
-        padding: 11px 20px;
-        text-transform: uppercase;
         font-family: 'Roboto';
         font-size: 16px;
+        font-weight: 500;
+        text-transform: uppercase;
+        position: relative;
+
+        &:hover {
+          text-decoration: none;
+          background-color: $brand-main;
+          color: $white;
+        }
+
+        i {
+          display: flex;
+          align-items: center;
+          font-size: 22px;
+          border: 1px solid #e8e8e8;
+          padding-left: 10px;
+          padding-right: 10px;
+          background-color: #e8e8e8;
+
+          &:hover {
+            background-color: $white;
+            color: $brand-main;
+          }
+        }
+
+        span {
+          margin-left: 35px;
+        }
       }
     }
   }
