--- a/Monochrome/scss/index.scss
+++ b/Monochrome/scss/index.scss
@@ -21,6 +21,7 @@ $fa-font-path: '/fonts';
 @import './category/index';
 @import './menspage/index';
 @import './productpage/index';
+@import './shoppingbag/index';
 
 body {
   font-family: 'PlayfairDisplay';
