--- a/Monochrome/scss/category/_catalog-tiles.scss
+++ b/Monochrome/scss/category/_catalog-tiles.scss
@@ -16,6 +16,7 @@
 
   align-items: center;
   position: relative;
+  margin-right: 10px;
 
   &:nth-of-type(3n + 1) {
     @include media-breakpoint-up('md') {
@@ -27,12 +28,10 @@
 
   img {
     @include media-breakpoint-up('md') {
-      width: 320px;
-      height: 292px;
+      width: 100%;
     }
 
-    width: 148px;
-    height: 148px;
+    width: 100%;
     margin-bottom: 10px;
   }
 
