--- a/Monochrome/scss/index.scss
+++ b/Monochrome/scss/index.scss
@@ -22,6 +22,7 @@ $fa-font-path: '/fonts';
 @import './menspage/index';
 @import './productpage/index';
 @import './shoppingbag/index';
+@import './lookBokk/lookBook';
 
 body {
   font-family: 'PlayfairDisplay';
